# neuroscope

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  railway.toml  start.sh
neuroscope/: __init__.py  scanner.py
neuroscope/connectivity/: __init__.py  graph.py
neuroscope/extractors/: __init__.py  hooks.py  sae.py
neuroscope/realtime/: server.py
neuroscope/realtime/static/: index.html
neuroscope/utils/: __init__.py
neuroscope/visualization/: __init__.py
tests/: test_sae.py
